--- a/src/pages/about-us/style.css
+++ b/src/pages/about-us/style.css
@@ -28,6 +28,9 @@ input[type="checkbox"] {
   display: none;
 }
 
+header{
+  background-color: #eb3738;
+}
 nav {
   background-color: #eb3738;
   width: 300px;
