--- a/src/pages/myths-and-truths/style.css
+++ b/src/pages/myths-and-truths/style.css
@@ -27,6 +27,10 @@ input[type="checkbox"] {
   display: none;
 }
 
+header{
+  background-color:#eb3738 ;
+}
+
 nav {
   background-color: #eb3738;
   width: 300px;
